--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="monoandroid71" />
+  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="monoandroid71" />
+  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="monoandroid71" />
+  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="monoandroid71" />
+  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="monoandroid71" />
+  <package id="Validation" version="2.2.8" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
