--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -6,8 +6,11 @@
   <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="monoandroid71" />
   <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="monoandroid71" />
   <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="monoandroid71" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
+  <package id="Plugin.Permissions" version="2.1.0" targetFramework="monoandroid71" />
   <package id="Validation" version="2.2.8" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="monoandroid71" />
+  <package id="Xam.Plugin.Geolocator" version="4.1.3" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
