--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -7,8 +7,10 @@
   <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="xamarinios10" />
   <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="xamarinios10" />
   <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="xamarinios10" />
+  <package id="Plugin.Permissions" version="2.1.0" targetFramework="xamarinios10" />
   <package id="Validation" version="2.2.8" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Geolocator" version="4.1.3" targetFramework="xamarinios10" />
   <package id="Xamarin.Auth" version="1.5.0.3" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.4.0.280" targetFramework="xamarinios10" />
 </packages>
